[package]
name = "pathfinder-gas-price"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
pathfinder-common = { path = "../common" }
pathfinder-ethereum = { path = "../ethereum" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
apollo_versioned_constants = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
