[package]
name = "starknet-gateway-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.62"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.73"
bytes = "1.4.0"
futures = { workspace = true }
http = { version = "0.2.9" }
metrics = "0.20.1"
mockall = { version = "0.11.4" }
pathfinder-common = { path = "../common" }
pathfinder-retry = { path = "../retry" }
pathfinder-serde = { path = "../serde" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet-gateway-types = { path = "../gateway-types" }
tokio = { workspace = true, features = ["macros", "test-util"] }
tracing = { workspace = true }
warp = { version = "0.3.5" }

[dev-dependencies]
assert_matches = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
lazy_static = { workspace = true }
pretty_assertions = { workspace = true }
stark_hash = { path = "../stark_hash" }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
test-log = { version = "0.2.12", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration-metrics"
path = "tests/metrics.rs"
