[package]
name = "starknet-gateway-client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
mockall = { version = "0.11.4" }
pathfinder-common = { path = "../common" }
pathfinder-retry = { path = "../retry" }
pathfinder-serde = { path = "../serde" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet-gateway-types = { path = "../gateway-types" }
tokio = { workspace = true, features = ["macros", "test-util"] }
tracing = { workspace = true }
warp = { version = "0.3.5" }

[dev-dependencies]
assert_matches = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
lazy_static = { workspace = true }
pathfinder-crypto = { path = "../crypto" }
pretty_assertions_sorted = { workspace = true }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
test-log = { version = "0.2.12", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration-metrics"
path = "tests/metrics.rs"
