[package]
name = "starknet-gateway-client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
mockall = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-retry = { path = "../retry" }
pathfinder-serde = { path = "../serde" }
pathfinder-version = { path = "../version" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
starknet-gateway-types = { path = "../gateway-types" }
tokio = { workspace = true, features = ["macros", "test-util"] }
tracing = { workspace = true }
[dev-dependencies]
assert_matches = { workspace = true }
base64 = { workspace = true }
fake = { workspace = true }
flate2 = { workspace = true }
gateway-test-utils = { path = "../gateway-test-utils" }
httpmock = { workspace = true }
pathfinder-crypto = { path = "../crypto" }
pretty_assertions_sorted = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true }
warp = { workspace = true, features = ["compression-gzip"] }

[[test]]
name = "integration-metrics"
path = "tests/metrics.rs"
