[package]
name = "starknet-gateway-test-fixtures"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
