[package]
name = "gateway-test-utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
starknet-gateway-types = { path = "../gateway-types" }
tokio = { workspace = true }
warp = "0.3"
