[package]
name = "starknet-gateway-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.62"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fake = { version = "2.5.0", features = ["derive"] }
lazy_static = "1.4.0"
pathfinder-common = { path = "../common" }
pathfinder-serde = { path = "../serde" }
primitive-types = "0.12.1"
rand = { version = "0.8.5" }
reqwest = "0.11.13"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
serde_with = { workspace = true }
sha3 = "0.10"
stark_hash = { path = "../stark_hash" }
stark_poseidon = { path = "../stark_poseidon" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
# Due to pathfinder_common::starkhash!() usage
fake = { version = "2.5.0", features = ["derive"] }
rand = { version = "0.8.5" }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
tokio = { workspace = true, features = ["macros", "test-util"] }
