[package]
name = "starknet-gateway-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.62"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true }
lazy_static = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-serde = { path = "../serde" }
primitive-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
serde_with = { workspace = true }
sha3 = { workspace = true }
stark_hash = { path = "../stark_hash" }
stark_poseidon = { path = "../stark_poseidon" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
starknet-gateway-test-fixtures = { path = "../gateway-test-fixtures" }
tokio = { workspace = true, features = ["macros", "test-util"] }
