[package]
name = "load-test"
version = "0.1.0"
description = "Load test for pathfinder JSON-RPC endpoints"
authors = ["Equilibrium Labs <info@equilibrium.co>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.73"

[dependencies]
goose = "0.17.2"
pathfinder-crypto = { path = "../crypto" }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["arbitrary_precision"] }
tokio = "1.37.0"
