[package]
name = "pathfinder-merkle-tree"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-storage = { path = "../storage" }
rand = { workspace = true }
rayon = { workspace = true }
starknet-gateway-types = { path = "../gateway-types" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
