[package]
name = "libp2p-request-response"
edition = "2021"
description = "Generic Request/Response Protocols"
version = "0.25.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
futures = "0.3.28"
libp2p = { version = "0.52.4", default-features = false, features = [] }
rand = "0.8"
smallvec = "1.11.1"
void = "1.0.2"
log = "0.4.20"
