[package]
name = "p2p-rrs"
version = "0.1.0"
edition = "2021"
description = "Libp2p Request/Response-Stream protocol for Pathfinder P2P"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.52.4", default-features = false }
rand = { workspace = true }
smallvec = "1.11.1"
void = "1.0.2"
log = "0.4.20"
