[package]
name = "p2p-v2"
version = { workspace = true }
description = "Pathfinder P2P"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libp2p = { workspace = true, features = [
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "gossipsub",
    "kad",
    "macros",
    "noise",
    "ping",
    "relay",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }
p2p_proto = { path = "../p2p_proto" }
p2p_stream = { path = "../p2p_stream" }
pathfinder-common = { version = "0.16.2", path = "../common" }
prost = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unsigned-varint = { workspace = true, features = ["futures"] }
zeroize = { workspace = true }
