[package]
name = "p2p"
version = { workspace = true }
description = "Pathfinder P2P"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
fake = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libp2p = { workspace = true, features = [
    "autonat",
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "relay",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }
make-stream = { path = "../make-stream" }
p2p_proto = { path = "../p2p_proto" }
p2p_stream = { path = "../p2p_stream" }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pretty_assertions_sorted = { workspace = true }
primitive-types = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tagged = { path = "../tagged" }
tagged-debug-derive = { path = "../tagged-debug-derive" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unsigned-varint = { workspace = true, features = ["futures"] }
void = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
env_logger = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
tagged = { path = "../tagged" }
tagged-debug-derive = { path = "../tagged-debug-derive" }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
