[package]
name = "p2p"
version = { workspace = true }
description = "Pathfinder P2P"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
fake = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libp2p = { workspace = true, features = [
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "relay",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }
p2p_proto = { path = "../p2p_proto" }
p2p_stream = { path = "../p2p_stream" }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-tagged = { path = "../tagged" }
pathfinder-tagged-debug-derive = { path = "../tagged-debug-derive" }
primitive-types = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unsigned-varint = { workspace = true, features = ["futures"] }
util = { path = "../util" }
void = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
hex = { workspace = true }
pathfinder-tagged = { path = "../tagged" }
pathfinder-tagged-debug-derive = { path = "../tagged-debug-derive" }
pretty_assertions_sorted = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
