[package]
name = "p2p_bootstrap"
version = "0.1.0"
edition = "2021"
description = "Bootstrap node for Pathfinder P2P"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = "0.13.0"
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
futures = "0.3.21"
libp2p = { version = "0.50.0", default-features = false, features = ["identify", "kad", "noise", "ping", "dns", "tcp", "tokio", "yamux", "relay", "autonat", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
zeroize = "1.5.7"
