[package]
name = "p2p_bootstrap"
version = "0.1.0"
description = "Bootstrap node for Pathfinder P2P"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
futures = { workspace = true }
libp2p = { version = "0.52.4", default-features = false, features = [
    "identify",
    "kad",
    "noise",
    "ping",
    "dns",
    "tcp",
    "tokio",
    "yamux",
    "autonat",
    "relay",
    "dcutr",
    "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zeroize = "1.6.0"
