[package]
name = "p2p_proto"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true, features = ["serde_json"] }
libp2p-identity = { version = "0.2.2", features = ["peerid"] }
p2p_proto_derive = { path = "../p2p_proto_derive" }
pathfinder-crypto = { path = "../crypto" }
primitive-types = { workspace = true }
prost = "0.12.1"
prost-types = "0.12.1"
rand = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }

[build-dependencies]
prost-build = "0.12.1"
