[package]
name = "p2p_proto"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true, features = ["serde_json"] }
libp2p-identity = { workspace = true, features = ["peerid"] }
p2p_proto_derive = { path = "../p2p_proto_derive" }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
primitive-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tagged = { path = "../tagged" }
tagged-debug-derive = { path = "../tagged-debug-derive" }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
