[package]
name = "p2p_proto"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
build = "build.rs"

[dependencies]
fake = { workspace = true, features = ["serde_json"] }
libp2p-identity = { workspace = true, features = ["peerid"] }
p2p_proto_derive = { path = "../p2p_proto_derive" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-tagged = { path = "../tagged" }
pathfinder-tagged-debug-derive = { path = "../tagged-debug-derive" }
primitive-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }

[build-dependencies]
prost-build = { workspace = true }
