[package]
name = "p2p_proto_v1"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
fake = { workspace = true }
libp2p-identity = { version = "0.2.2", features = ["peerid"] }
p2p_proto_derive = { path = "../p2p_proto_derive" }
primitive-types = { workspace = true }
prost = "0.11.0"
prost-types = "0.11.9"
rand = { workspace = true }
stark_hash = { path = "../stark_hash" }

[dev-dependencies]
rstest = "0.18.2"

[build-dependencies]
prost-build = "0.11.9"
